# sql-data-compare

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  config-example.json  config.json  main.py  pyproject.toml
src/sql_data_compare/: comparison.py  connection.py  execution.py  main.py  types.py
src/utils/: __init__.py
utils/: get_conn.py
